--- a/ComprasOnline/Views/Home/Index.cshtml
+++ b/ComprasOnline/Views/Home/Index.cshtml
@@ -1,11 +1,51 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿<div class="home">
+		<h2>NUEVOS PRODUCTOS</h2>
+		<br />
+		<h1>ONOFRIO PACENZA - PORTUARIA</h1>
+		<br />
+		<p class="main-description">
+				Obra retratada en Oleo, El celebre pintor Onofrio Pacenza describe
+				en sus trazos el paisaje humilde del barrio de puerto madero entre
+				los años 1950. Este ejemplar en perfectas condiciones tiene la
+				certificación de autenticidad.
+		</p>
 
+		<div class="buttons-panel">
+				<button class="button-secondary">Detalles</button>
+				<button class="button-principal">Añadir</button>
+		</div>
 
-<h1>Gestion de Cuadros</h1>
-<ul>
-    <li>
-        <a href="Product/Index">Listar Productos</a>
-    </li>
-</ul>
+		<div>
+				<ul>
+						<li>
+								<a class="left-arrow" href="/">
+										<img src="~/Content/Images/left.icon.png" />
+								</a>
+						</li>
+						<li class="dots">
+								<a class="dot" href="/">
+										<img src="~/Content/Images/Elipse 2.png" />
+								</a>
+								<a class="dot" href="/">
+										<img src="~/Content/Images/Elipse 2.png" />
+								</a>
+								<a class="dot-selected" href="/">
+										<img src="~/Content/Images/Elipse 3.png" />
+								</a>
+						</li>
+						<li>
+								<a class="right-arrow" href="/Home/Example">
+										<img src="~/Content/Images/right.icon.png" />
+								</a>
+						</li>
+				</ul>
+		</div>
+
+		<picture>
+				<img src="~/Content/Images/cuadro.png" />
+		</picture>
+
+		<div class="price">
+				<p>U$S 700.-</p>
+		</div>
+</div>
