--- a/ComprasOnline/Content/Site.css
+++ b/ComprasOnline/Content/Site.css
@@ -1,24 +1,299 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿/*GENERAL*/
+@font-face {
+  font-family: Segoe UI;
+  src: local("Segoe UI"), url(../fonts/segoeui.TTF) format("truetype");
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+@font-face {
+  font-family: UniversS 45 Light;
+  src: local("UniversS 45 Light"), url(../fonts/UVSL.TTF) format("truetype");
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+@font-face {
+  font-family: MS Reference Sans Serif;
+  src: local("MS Reference Sans Serif"), url(../fonts/REFSAN.TTF) format("truetype");
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+@font-face {
+  font-family: Microsoft JhengHei;
+  src: local("Microsoft JhengHei"), url(../fonts/msjh.ttc) format("truetype");
+}
+
+@font-face {
+  font-family: Tahoma;
+  src: local("Tahoma"), url(../fonts/tahoma.ttf) format("truetype");
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
+html {
+  background-image: url(Images/background.png);
+  background-position: center;
+  background-size: cover;
+}
+
+h1, h2, h3 {
+  margin: 0;
+  padding: 0;
+}
+
+*:focus {
+  outline: none;
+}
+
+nav ul {
+  list-style: unset;
+}
+
+h1 {
+  font-family:UniversS 45 Light;
+  color:white;
+  font-weight:bold;
+  font-size: 50px;
+}
+
+h2 {
+  font-family: Microsoft JhengHei;
+  color: white;
+  font-size: 30px;
+}
+
+
+.input-text {
+  text-align: center;
+  border: none;
+  border-radius: 35px;
+  width: 200px;
+  font-family: Segoe UI;
+  font-size: 30px;
+  color: #403F3F;
+}
+
+.input-checkbox:checked {
+  background-color: #3C47D8;
+}
+
+.input-checkbox {
+  border-radius: 10px;
+  height: 40px;
+  width: 40px;
+  border: 1px solid white;
+  background: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.input-radius {
+  height: 40px;
+  width: 40px;
+}
+
+input {
+  margin: 15px 0px;
+}
+
+label {
+  vertical-align: super;
+}
+
+a {
+  text-decoration: none;
+}
+
+form {
+  background: rgba(38, 38, 38, 0.58);
+  border-radius: 43px;
+  padding: 30px;
+  width: fit-content;
+}
+
+button, input[type="submit"] {
+  border-radius: 43px;
+  min-height: 73px;
+  min-width: 200px;
+  font-family: Segoe UI;
+  font-size: 34px;
+}
+
+.button-principal {
+  color: #5E5E5E;
+  background-color: white;
+  border: none;
+}
+
+
+  .button-principal:hover {
+    background-color: #3C47D8;
+    color: white;
+  }
+
+.button-secondary {
+  border: solid 1px white;
+  color: white;
+  background-color: transparent;
+}
+
+
+  .button-secondary:hover {
+    border: none;
+    background-color: #3C47D8;
+    color: white;
+  }
+
+.buttons-panel button {
+  margin: 10px;
+}
+
+/*HEADER*/
+
+header {
+  height: 80px;
+  padding-top: 25px;
+}
+
+.header_menu {
+  display: inline;
+  position: relative;
+  top: 20%;
+}
+
+header ul, ul li {
+  display: inline;
+}
+
+header ul li {
+  margin: 0px 43px;
+}
+
+
+.icon_headers li {
+  margin: 0px 23px;
+}
+
+header nav ul {
+  font-size: 24px;
+  font-family: Segoe UI;
+}
+
+.icon_headers {
+  position: absolute;
+  margin-right: 20px;
+  right: 0;
+}
+
+header ul li a {
+  color: transparent;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+nav ul li a:hover {
+  color: #3C47D8;
+}
+
+.icon {
+  height: 50px;
+}
+
+/*BODY*/
+.body {
+
+}
+
+/*FOOTER*/
+footer {
+  background: rgba(159, 158, 158, .58);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+}
+
+footer div {
+  display: flex;
+}
+
+footer img {
+  margin: 20px 0px 0px 100px;
+  height: 50px;
+}
+
+footer p {
+  position: absolute;
+  right: 0;
+  margin: 30px 50px 0px 0px;
+  font-size: 26px;
+  font-family: Segoe UI;
+  color: white;
+}
+
+
+  /*HOME*/
+.home {
+  padding: 100px 160px;
+}
+
+.main-description {
+  font-family: Tahoma;
+  font-size: 30px;
+  color: white;
+  width: 1000px;
+}
+
+picture {
+  position: absolute;
+  right: 15%;
+  top: 25%;
+  z-index: -1;
+}
+
+.price {
+  position: absolute;
+  right: 10%;
+  min-width: 200px;
+  bottom: 17%;
+  border-radius: 43px;
+  background-color: #3C47D8;
+  margin: 25px;
+}
+
+.price p {
+  color: white;
+  font-family: Segoe UI;
+  font-size: 34px;
+  margin: 20px;
+}
+
+.left-arrow img, .right-arrow img {
+  height: 50px;
+  width: 50px;
+}
+
+.dot, .dot-selected {
+  height: 13px;
+  width: 13px;
+}
+
+.dots {
+  position: relative;
+  bottom: 16px;
+}
+
+/*EXAMPLE*/
+
+.example {
+  padding: 50px 150px;
+}
+
+* {
+  font-family: Segoe UI;
+  color: white;
+  font-size: 24px;
 }
