--- a/ComprasOnline/Views/Shared/_Layout.cshtml
+++ b/ComprasOnline/Views/Shared/_Layout.cshtml
@@ -1,42 +1,63 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+	<meta htt-equiv="Content-Type" content="text/html; charset-utf-8" />
+	<meta name="viewport" content="width-device-width, initial-scale-1.0" />
+
+	<title>ART - Market</title>
+	<link href="~/Content/site.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+	<div>
+		<header>
+			<nav class="header_menu">
+				<ul>
+					<li><a href="/">Inicio</a></li>
+					<li><a href="/Product">Productos</a></li>
+					<li><a href="/Home/Contact">Contacto</a></li>
+				</ul>
+			</nav>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+			<ul class="icon_headers">
+				<li>
+					<a href="/Cart">
+						<img class="icon" src="~/Content/Images/cart.icon.png" />
+					</a>
+				</li>
+				<li>
+					<a href="/User">
+						<img class="icon" src="~/Content/Images/user.icon.png" />
+					</a>
+				</li>
+			</ul>
+		</header>
+		<section>
+			<article class="body">
+				@RenderBody()
+			</article>
+		</section>
+		<!--
+		<aside>
+			<article>
+			</article>
+		</aside>
+		-->
+		<footer>
+			<div>
+				<img class="icon" src="~/Content/Images/evenlope.icon.png" />
+				<p>Art Market - @DateTime.Now.Year</p>
+			</div>
+
+			<!--
+			<div class="footer_icon">
+				<img src="~/Content/Images/user.icon.png" />
+			</div>
+			<div class="footer_label">
+				<p>Art Market - @DateTime.Now.Year</p>
+			</div>
+				-->
+		</footer>
+	</div>
+	@RenderSection("scripts", required: false)
 </body>
 </html>
