--- a/ComprasOnline/Content/Site.css
+++ b/ComprasOnline/Content/Site.css
@@ -297,3 +297,69 @@ picture {
   color: white;
   font-size: 24px;
 }
+
+/* ABM Producto */
+/* TODO: evaluar poner esto en css separado */
+.form-control {
+    display: block;
+    width: 80%;
+    height: 22px;
+    padding: 6px 12px;
+    font-size: 14px;
+    color: #555555;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.form-control:focus {
+    border-color: #66afe9;
+    outline: 0;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, 0.6);
+}
+.button-success, .button-default {
+    color: white;
+    border-radius: 5px;
+    font-size: 85%;
+    height: 35px;
+}
+
+.color-success {
+    background: rgb(28, 190, 65);
+}
+
+.color-default {
+    background-color: rgb(225, 225, 225);
+    color: black;
+}
+
+.btn {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 4px;
+    user-select: none;
+}
+
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn.active.focus {
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
+}
+
+.btn:hover, .btn:focus, .btn.focus {
+    color: #333;
+}
