--- a/ComprasOnline/Views/Shared/_Layout.cshtml
+++ b/ComprasOnline/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width-device-width, initial-scale-1.0" />
 
 	<title>ART - Market</title>
-	<link href="~/Content/site.css" rel="stylesheet" />
+	<link href="~/Content/Site.css" rel="stylesheet" />
 </head>
 <body>
 	<div>
