refactor singleton, add names to product form

--- a/ComprasOnline/Views/Product/Create.cshtml
+++ b/ComprasOnline/Views/Product/Create.cshtml
@@ -8,23 +8,23 @@
 <form method="post" action="/Product/Create">
     <label for="title">Título</label>
     <div>
-        <input type="text" class="form-control" id="title" value="" placeholder="">
+        <input type="text" class="form-control" id="title" name="title" value="" placeholder="">
     </div>
     <label for="description">Descripción</label>
     <div>
-        <input type="text" class="form-control" id="description" value="" placeholder="">
+        <input type="text" class="form-control" id="description" name="description" value="" placeholder="">
     </div>
     <label for="artistId">Artista</label>
     <div>
-        <input type="text" class="form-control" id="artistId" value="" placeholder="">
+        <input type="text" class="form-control" id="artistId" name="artistId" value="" placeholder="">
     </div>
     <label for="image">Imagen</label>
     <div>
-        <input type="text" class="form-control" id="image" value="" placeholder="">
+        <input type="text" class="form-control" id="image" name="image" value="" placeholder="">
     </div>
     <label for="price">Precio ($)</label>
     <div>
-        <input type="text" class="form-control" id="price" value="" placeholder="">
+        <input type="text" class="form-control" id="price" name="price" value="" placeholder="">
     </div>
 
     <button type="submit" class="btn button-success color-success">Guardar</button>
