--- a/ComprasOnline/Views/Product/Create.cshtml
+++ b/ComprasOnline/Views/Product/Create.cshtml
@@ -2,30 +2,42 @@
 @{
     ViewBag.Title = "Cargar producto";
 }
+<div class="container">
+    <h2>Cargar producto</h2>
 
-<h2>Cargar producto</h2>
+    <form method="post" action="/Product/Create">
+        <label for="title">Título</label>
+        <div>
+            <input type="text" class="form-control" id="title" name="title" value="" placeholder="">
+        </div>
+        <label for="description">Descripción</label>
+        <div>
+            <input type="text" class="form-control" id="description" name="description" value="" placeholder="">
+        </div>
+        <label for="artistId">Artista</label>
+        <div>
+            <select name="artistId" id="artistId">
+                <option value="1" selected>Artista 1</option>
+                <option value="2">Artista 2</option>
+            </select>
+        </div>
+        <label for="quantitySold">Cantidad vendida</label>
+        <div>
+            <input type="number" class="form-control" id="quantitySold" name="quantitySold" min="0" max="1000" value="0">
+        </div>
+        <label for="avgStars">Calificación promedio (entre 1 y 5)</label>
+        <div>
+            <input type="number" class="form-control" id="avgStars" name="avgStars" min="1" max="5" step="0.25" value="3">
+        </div>
+        <label for="image">Imagen</label>
+        <div>
+            <input type="text" class="form-control" id="image" name="image" value="" placeholder="">
+        </div>
+        <label for="price">Precio ($)</label>
+        <div>
+            <input type="number" class="form-control" id="price" name="price" min="10" max="1000" step="10" value="10">
+        </div>
 
-<form method="post" action="/Product/Create">
-    <label for="title">Título</label>
-    <div>
-        <input type="text" class="form-control" id="title" name="title" value="" placeholder="">
-    </div>
-    <label for="description">Descripción</label>
-    <div>
-        <input type="text" class="form-control" id="description" name="description" value="" placeholder="">
-    </div>
-    <label for="artistId">Artista</label>
-    <div>
-        <input type="text" class="form-control" id="artistId" name="artistId" value="" placeholder="">
-    </div>
-    <label for="image">Imagen</label>
-    <div>
-        <input type="text" class="form-control" id="image" name="image" value="" placeholder="">
-    </div>
-    <label for="price">Precio ($)</label>
-    <div>
-        <input type="text" class="form-control" id="price" name="price" value="" placeholder="">
-    </div>
-
-    <button type="submit" class="btn button-success color-success">Guardar</button>
-</form>
+        <button type="submit" class="btn button-success color-success">Guardar</button>
+    </form>
+</div>
