--- a/ComprasOnline/Views/Shared/_Layout.cshtml
+++ b/ComprasOnline/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 						<nav class="header_menu">
 								<ul>
 										<li><a href="/">Inicio</a></li>
-										<li><a href="/Search">Buscar</a></li>
+										<li><a href="/Product/Search">Buscar</a></li>
 										<li><a href="/Home/Contact">Contacto</a></li>
 										<li><a href="/Product">Productos</a></li>
 										<li><a href="/Users">Usuarios</a></li>
