--- a/ArtMarket/Views/Cart/Index.cshtml
+++ b/ArtMarket/Views/Cart/Index.cshtml
@@ -1,7 +1,72 @@
-﻿
+﻿@model Common.Entities.Cart
+
 @{
-    ViewBag.Title = "Index";
+  ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="form">
+
+  <div>
+    <input type="button" value="Finalizar"/>
+  </div>
+  <div>
+    <table class="table">
+      <tr>
+        <th>
+          @Html.DisplayNameFor(model => model.CartItems.FirstOrDefault().Product.Artist.LastName)
+        </th>
+        <th>
+          @Html.DisplayNameFor(model => model.CartItems.FirstOrDefault().Product.Title)
+        </th>
+        <th>
+          @Html.DisplayNameFor(model => model.CartItems.FirstOrDefault().Product.Description)
+        </th>
+        <th>
+          @Html.DisplayNameFor(model => model.CartItems.FirstOrDefault().Quantity)
+        </th>
+        <th>
+          @Html.DisplayNameFor(model => model.CartItems.FirstOrDefault().Product.Price)
+        </th>
+        <th>
+          @Html.DisplayNameFor(model => model.CartItems.FirstOrDefault().Price)
+        </th>
+
+        <th></th>
+      </tr>
+
+      @foreach (var item in Model.CartItems)
+      {
+        <tr>
+          <td>
+            @Html.DisplayFor(model => item.Product.Artist.LastName)
+          </td>
+
+          <td>
+            @Html.DisplayFor(model => item.Product.Title)
+          </td>
+          <td>
+            @Html.DisplayFor(model => item.Product.Description)
+          </td>
+          <td>
+            @Html.DisplayFor(model => item.Quantity)
+          </td>
+          <td>
+            @Html.DisplayFor(model => item.Product.Price)
+          </td>
+          <td>
+            @Html.DisplayFor(model => item.Price)
+          </td>
+
+          <td>
+            @Html.ActionLink("+", "Increase", new { id = item.Id })
+            @Html.ActionLink("-", "Decrease", new { id = item.Id })
+            @Html.ActionLink("Eliminar", "Delete", new { id = item.Id })
+          </td>
+        </tr>
+      }
+
+    </table>
+  </div>
+
+</div>
 
