.- fix some styles.

--- a/ArtMarket/Views/Home/Contact.cshtml
+++ b/ArtMarket/Views/Home/Contact.cshtml
@@ -1,17 +1,21 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+  <div class="form-dialog contact-panel">
+    <h2>Trabajo Grupal Integrador</h2>
+    <br />
+    <h3>Materia: Lenguaje de Programación de ultima generación</h3>
+    <br />
+    <h3>Equipo IV</h3>
+    <br />
+    <h3>Integrantes:</h3>
+    <br />
+    <address>
+      <strong>Kowalczuk Alexis:</strong> <a href="mailto:AlexisRK5@gmail.com">AlexisRK5@gmail.com</a>
+      <br />
+      <strong>Horvath Luciano:</strong> <a href="mailto:lucianohorvath94@gmail.com">lucianohorvath94@gmail.com</a>
+      <br />
+      <strong>Fernandez Nicolas:</strong> <a href="mailto:nikofernandez223@gmail.com">nikofernandez223@gmail.com</a>
+    </address>
+  </div>
