--- a/ArtMarket/Views/Shared/_Layout.cshtml
+++ b/ArtMarket/Views/Shared/_Layout.cshtml
@@ -51,8 +51,10 @@
 				-->
 				<footer>
 						<div>
+							<a href="mailto:AlexisRK5@gmail.com">
 								<img class="icon" src="~/Content/Images/evenlope.icon.png" />
-								<p>Art Market - @DateTime.Now.Year</p>
+							</a>
+							<p>Art Market - @DateTime.Now.Year</p>
 						</div>
 				</footer>
 		</div>
