--- a/ArtMarket/Views/Cart/Index.cshtml
+++ b/ArtMarket/Views/Cart/Index.cshtml
@@ -1,13 +1,10 @@
 ﻿@model Common.Entities.Cart
 
-@{
-  ViewBag.Title = "Index";
-}
 
-<div class="form">
+<form action="/" method="post" class="cart-form">
 
   <div>
-    <input type="button" value="Finalizar"/>
+    <input name="submit" type="submit" value="Finalizar" class="button-principal" />
   </div>
   <div>
     <table class="table">
@@ -36,37 +33,41 @@
 
       @foreach (var item in Model.CartItems)
       {
-        <tr>
-          <td>
-            @Html.DisplayFor(model => item.Product.Artist.LastName)
-          </td>
+    <tr>
+      <td>
+        @Html.DisplayFor(model => item.Product.Artist.LastName)
+      </td>
 
-          <td>
-            @Html.DisplayFor(model => item.Product.Title)
-          </td>
-          <td>
-            @Html.DisplayFor(model => item.Product.Description)
-          </td>
-          <td>
-            @Html.DisplayFor(model => item.Quantity)
-          </td>
-          <td>
-            @Html.DisplayFor(model => item.Product.Price)
-          </td>
-          <td>
-            @Html.DisplayFor(model => item.Price)
-          </td>
+      <td>
+        @Html.DisplayFor(model => item.Product.Title)
+      </td>
+      <td>
+        @Html.DisplayFor(model => item.Product.Description)
+      </td>
+      <td>
+        @Html.DisplayFor(model => item.Quantity)
+      </td>
+      <td>
+        @Html.DisplayFor(model => item.Product.Price)
+      </td>
+      <td>
+        @Html.DisplayFor(model => item.Price)
+      </td>
 
-          <td>
-            @Html.ActionLink("+", "Increase", new { id = item.Id })
-            @Html.ActionLink("-", "Decrease", new { id = item.Id })
-            @Html.ActionLink("Eliminar", "Delete", new { id = item.Id })
-          </td>
-        </tr>
+      <td>
+        @Html.ActionLink("-", "Decrease", new { id = item.Id })
+      </td>
+      <td>
+        @Html.ActionLink("+", "Increase", new { id = item.Id })
+      </td>
+      <td>
+        @Html.ActionLink("Eliminar", "Delete", new { id = item.Id })
+      </td>
+    </tr>
       }
 
     </table>
   </div>
 
-</div>
+  </form>
 
