--- a/ArtMarket/Content/Site.css
+++ b/ArtMarket/Content/Site.css
@@ -443,6 +443,17 @@ footer p {
     outline: 0;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
+
+.form-control-file {
+    display: block;
+    width: 100%;
+    font-size: 16px;
+}
+
+.small-text {
+    font-size: 16px;
+}
+
 .button-success, .button-default {
     color: white;
     border-radius: 5px;
