--- a/ArtMarket/Views/Shared/_Layout.cshtml
+++ b/ArtMarket/Views/Shared/_Layout.cshtml
@@ -18,8 +18,8 @@
 									@if (User.IsInRole("Admin"))
 									{ 
 										<li><a href="/Product">Productos</a></li>
-										<li><a href="/Users">Usuarios</a></li>
-										<li><a href="/Artists">Artistas</a></li>
+										<li><a href="/User">Usuarios</a></li>
+										<li><a href="/Artist">Artistas</a></li>
 									}
 								</ul>
 						</nav>
