--- a/ArtMarket/Views/Product/Index.cshtml
+++ b/ArtMarket/Views/Product/Index.cshtml
@@ -14,25 +14,27 @@
 
     <table>
       <thead>
-        <tr>
-          <th>Titulo  </th>
-          <th>Descripción </th>
-          <th>Precio  </th>
-          <th>Cantidad Vendidos   </th>
-          <th>Calificación Promedio   </th>
-          <th colspan="2">Acciones</th>
-        </tr>
+          <tr>
+              <th>Titulo</th>
+              <th>Descripción</th>
+              <th>Artista</th>
+              <th>Precio</th>
+              <th>Cantidad Vendidos</th>
+              <th>Calificación Promedio</th>
+              <th colspan="2">Acciones</th>
+          </tr>
       </thead>
       <tbody>
       </tbody>
       @foreach (Product item in Model)
       {
     <tr>
-        <td> @item.Title    </td>
-        <td> @item.Description  </td>
-        <td> @item.Price    </td>
-        <td> @item.QuantitySold </td>
-        <td> @item.AvgStars </td>
+        <td> @item.Title</td>
+        <td> @item.Description</td>
+        <td> @item.Artist.LastName</td>
+        <td> @item.Price</td>
+        <td> @item.QuantitySold</td>
+        <td> @item.AvgStars</td>
         <td class="color-success">@Html.ActionLink("Modificar", "Modify", "Product", new { id = item.Id }, null)</td>
         <td class="color-warning">@Html.ActionLink("Eliminar", "Delete", "Product", new { id = item.Id }, null)</td>
     </tr>
