--- a/ArtMarket/Views/Order/Checkout.cshtml
+++ b/ArtMarket/Views/Order/Checkout.cshtml
@@ -5,52 +5,57 @@
 
 @model Common.Entities.Order
 
-<h1>Orden Generada #@Model.OrderNumber</h1>
 
+<h1>Orden Confirmada!</h1>
+<h2>Tu Orden #@Model.OrderNumber</h2>
 <div>
-
-<b>Fecha: </b> @Model.OrderDate <br>
-<b>Cantidad: </b> @Model.ItemCount <br>
-<b>Total: $</b> @Model.TotalPrice <br>
-
+    <hr>
+    <br />
+    <b>Fecha: </b> @Model.OrderDate <br>
+    <b>Cantidad de Productos: </b> @Model.ItemCount <br>
+    <b>Total: $</b> @Model.TotalPrice <br>
+    <br />
 </div>
+<br />
 
 <h2>Detalle de la Orden</h2>
+<hr>
+<div>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.OrderItems.FirstOrDefault().ProductId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.OrderItems.FirstOrDefault().Quantity)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.OrderItems.FirstOrDefault().Price)
+            </th>
 
-    <div>
-        <table class="table">
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model.OrderItems)
+        {
             <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.OrderItems.FirstOrDefault().ProductId)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.OrderItems.FirstOrDefault().Quantity)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.OrderItems.FirstOrDefault().Price)
-                </th>
-
-                <th></th>
+                <td>
+                    @Html.DisplayFor(model => item.ProductId)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => item.Quantity)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => item.Price)
+                </td>
             </tr>
+        }
 
-            @foreach (var item in Model.OrderItems)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(model => item.ProductId)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => item.Quantity)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => item.Price)
-                    </td>
-                </tr>
-            }
-
-        </table>
-        <div>
-            <button type="button" class="button-principal" onclick="location.href='@Url.Action("Index", "Home")'">Inicio</button>
-        </div>
+    </table>
+    <br />
+    <br />
+    <div>
+        <button type="button" class="button-principal" onclick="location.href='@Url.Action("Index", "Home")'">Inicio</button>
     </div>
+</div>
 
