--- a/ArtMarket/Views/Artist/Create.cshtml
+++ b/ArtMarket/Views/Artist/Create.cshtml
@@ -2,37 +2,42 @@
 @{
     ViewBag.Title = "Cargar artista";
 }
-<div class="container">
+<div class="artistpanel">
+  <form method="post" action="/Artist/Create">
     <h2>Cargar artista</h2>
-
-    <form method="post" action="/Artist/Create">
+    <div style="display: inline-flex;">
+      <div style="display: inline-block;">
         <label for="firstName">Nombre</label>
-        <div>
-            <input type="text" class="form-control" id="firstName" name="firstName" value="" placeholder="">
-        </div>
+        <input type="text" class="form-control" id="firstName" name="firstName" value="" placeholder="">
+      </div>
+
+      <div>
         <label for="lastName">Apellido</label>
-        <div>
-            <input type="text" class="form-control" id="lastName" name="lastName" value="" placeholder="">
-        </div>
-
+        <input type="text" class="form-control" id="lastName" name="lastName" value="" placeholder="">
+      </div>
+    </div>
+    <div>
+      <div style="float: left;">
         <label for="lifeSpan">Años de vida</label>
-        <div>
-            <input type="number" class="form-control" id="lifeSpan" name="lifeSpan" min="1" max="110" value="60">
-        </div>
+        <input type="number" class="form-control" id="lifeSpan" name="lifeSpan" min="1" max="110" value="60">
+      </div>
+
+      <div style="float: right;">
         <label for="country">País</label>
-        <div>
-            <input type="text" class="form-control" id="country" name="country" value="" placeholder="">
-        </div>
-
+        <input type="text" class="form-control" id="country" name="country" value="" placeholder="">
+      </div>
+    </div>
+    <div>
+      <div style="float: left;">
         <label for="description">Descripción</label>
-        <div>
-            <input type="text" class="form-control" id="description" name="description" value="" placeholder="">
-        </div>
-        <label for="totalProducts">Cantidad de cuadros</label>
-        <div>
-            <input type="number" class="form-control" id="totalProducts" name="totalProducts" min="1" max="500" value="10">
-        </div>
+        <input type="text" class="form-control" id="description" name="description" value="" placeholder="">
+      </div>
 
-        <button type="submit" class="btn button-success color-success">Guardar</button>
-    </form>
+      <div style="float: right;">
+        <label for="totalProducts">Cantidad de cuadros</label>
+        <input type="number" class="form-control" id="totalProducts" name="totalProducts" min="1" max="500" value="10">
+      </div>
+    </div>
+    <button type="submit" class="button-principal">Guardar</button>
+  </form>
 </div>
