--- a/ArtMarket/Views/Artist/Index.cshtml
+++ b/ArtMarket/Views/Artist/Index.cshtml
@@ -8,7 +8,7 @@
 
   <div class="product-list">
     <a href="/Artist/Create">
-        <button class="btn button-success color-success">Nuevo Artista</button>
+      <button class="button-principal">Agregar</button>
     </a>
 
     <table>
@@ -34,8 +34,16 @@
         <td> @artist.Country</td>
         <td> @artist.Description</td>
         <td> @artist.TotalProducts</td>
-        <td class="color-success">@Html.ActionLink("Modificar", "Modify", "Artist", new { id = artist.Id }, null)</td>
-        <td class="color-warning">@Html.ActionLink("Eliminar", "Delete", "Artist", new { id = artist.Id }, null)</td>
+        <td>
+          <a href="/Artist/Modify/@artist.Id">
+            <img class="icon" src="~/Content/Images/edit.icon.png" />
+          </a>
+        </td>
+        <td>
+          <a href="/Artist/Delete/@artist.Id">
+            <img class="icon" src="~/Content/Images/trash.icon.png" />
+          </a>
+        </td>
     </tr>
       }
 
