--- a/ArtMarket/Views/Artist/Modify.cshtml
+++ b/ArtMarket/Views/Artist/Modify.cshtml
@@ -3,39 +3,45 @@
 @{
     ViewBag.Title = "Modificar artista";
 }
-<div class="container">
+<div class="artistpanel">
+  <form method="post" action="/Artist/DoUpdate">
     <h2>Modificar artista</h2>
-
-    <form method="post" action="/Artist/DoUpdate">
+    <div style="display: inline-flex;">
+      <div style="display: inline-block;">
         <label for="firstName">Nombre</label>
-        <div>
-            <input type="text" class="form-control" id="firstName" name="firstName" value="@Model.FirstName" placeholder="">
-        </div>
+        <input type="text" class="form-control" id="firstName" name="firstName" value="@Model.FirstName" placeholder="">
+      </div>
+
+      <div>
         <label for="lastName">Apellido</label>
-        <div>
-            <input type="text" class="form-control" id="lastName" name="lastName" value="@Model.LastName" placeholder="">
-        </div>
-
+        <input type="text" class="form-control" id="lastName" name="lastName" value="@Model.LastName" placeholder="">
+      </div>
+    </div>
+    <div>
+      <div style="float: left;">
         <label for="lifeSpan">Años de vida</label>
-        <div>
-            <input type="number" class="form-control" id="lifeSpan" name="lifeSpan" min="1" max="110" value="@Model.LifeSpan">
-        </div>
+        <input type="number" class="form-control" id="lifeSpan" name="lifeSpan" min="1" max="110" value="@Model.LifeSpan">
+      </div>
+
+      <div style="float: right;">
         <label for="country">País</label>
-        <div>
-            <input type="text" class="form-control" id="country" name="country" value="@Model.Country" placeholder="">
-        </div>
-
+        <input type="text" class="form-control" id="country" name="country" value="@Model.Country" placeholder="">
+      </div>
+    </div>
+    <div>
+      <div style="float: left;">
         <label for="description">Descripción</label>
-        <div>
-            <input type="text" class="form-control" id="description" name="description" value="@Model.Description" placeholder="">
-        </div>
+        <input type="text" class="form-control" id="description" name="description" value="@Model.Description" placeholder="">
+      </div>
+
+      <div style="float: right;">
         <label for="totalProducts">Cantidad de cuadros</label>
-        <div>
-            <input type="number" class="form-control" id="totalProducts" name="totalProducts" min="1" max="500" value="@Model.TotalProducts">
-        </div>
+        <input type="number" class="form-control" id="totalProducts" name="totalProducts" min="1" max="500" value="@Model.TotalProducts">
+      </div>
+    </div>
 
-        @Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(model => model.Id)
 
-        <button type="submit" class="btn button-success color-success">Guardar</button>
-    </form>
+    <button type="submit" class="button-principal">Guardar</button>
+  </form>
 </div>
