--- a/ArtMarket/Views/User/Index.cshtml
+++ b/ArtMarket/Views/User/Index.cshtml
@@ -1,45 +1,53 @@
 ﻿@using Common.Entities;
 @model IList<User>
 @{
-  ViewBag.Title = "Índice";
+	ViewBag.Title = "Índice";
 }
 
-<!--<h2>Index</h2>-->
+<div class="product-list">
+	<a href="/User/Create">
+		<button class="button-principal">Agregar</button>
+	</a>
 
-  <div class="product-list">
-    <a href="/User/Create">
-        <button class="btn button-success color-success">Nuevo Usuario</button>
-    </a>
+	<table>
+		<thead>
+			<tr>
+				<th>Nombre</th>
+				<th>Apellido</th>
+				<th>Email</th>
+				<th>Ciudad</th>
+				<th>País</th>
+				<th>Fecha de registro</th>
+				<!--<th>Cantidad de pedidos</th>-->
+				<th colspan="2">Acciones</th>
+			</tr>
+		</thead>
+		<tbody>
+		</tbody>
+		@foreach (User user in Model)
+		{
+			<tr>
+				<td> @user.FirstName</td>
+				<td> @user.LastName</td>
+				<td> @user.Email</td>
+				<td> @user.City</td>
+				<td> @user.Country </td>
+				<td> @user.SignupDate </td>
+				<!--<td> @user.OrderCount </td>-->
+				<td>
+					<a href="/User/Modify/@user.Id">
+						<img class="icon" src="~/Content/Images/edit.icon.png" />
+					</a>
+					<!--@Html.ActionLink("Modificar", "Modify", "User", new { id = user.Id }, null)-->
+				</td>
+				<td>
+					<a href="/User/Delete/@user.Id">
+						<img class="icon" src="~/Content/Images/trash.icon.png" />
+					</a>
+					<!--@Html.ActionLink("Eliminar", "Delete", "User", new { id = user.Id }, null)-->
+				</td>
+			</tr>
+		}
 
-    <table>
-      <thead>
-          <tr>
-              <th>Nombre</th>
-              <th>Apellido</th>
-              <th>Email</th>
-              <th>Ciudad</th>
-              <th>País</th>
-              <th>Fecha de registro</th>
-              <th>Cantidad de pedidos</th>
-              <th colspan="2">Acciones</th>
-          </tr>
-      </thead>
-      <tbody>
-      </tbody>
-      @foreach (User user in Model)
-      {
-       <tr>
-           <td> @user.FirstName</td>
-           <td> @user.LastName</td>
-           <td> @user.Email</td>
-           <td> @user.City</td>
-           <td> @user.Country </td>
-           <td> @user.SignupDate </td>
-           <td> @user.OrderCount </td>
-           <td class="color-success">@Html.ActionLink("Modificar", "Modify", "User", new { id = user.Id }, null)</td>
-           <td class="color-warning">@Html.ActionLink("Eliminar", "Delete", "User", new { id = user.Id }, null)</td>
-       </tr>
-      }
-
-    </table>
-  </div>
+	</table>
+</div>
