--- a/ArtMarket/Views/User/Modify.cshtml
+++ b/ArtMarket/Views/User/Modify.cshtml
@@ -3,45 +3,48 @@
 @{
     ViewBag.Title = "Modificar usuario";
 }
-<div class="container">
+<div class="userpanel">
+  <form method="post" action="/User/DoUpdate">
     <h2>Modificar usuario</h2>
-
-    <form method="post" action="/User/DoUpdate">
+    <div style="display: inline-flex;">
+      <div style="display: inline-block;">
         <label for="firstName">Nombre</label>
-        <div>
-            <input type="text" class="form-control" id="firstName" name="firstName" value="@Model.FirstName">
-        </div>
+        <input type="text" class="form-control" id="firstName" name="firstName" value="@Model.FirstName">
+      </div>
+      <div style="float: right;">
         <label for="lastName">Apellido</label>
-        <div>
-            <input type="text" class="form-control" id="lastName" name="lastName" value="@Model.LastName"">
-        </div>
-
+        <input type="text" class="form-control" id="lastName" name="lastName" value="@Model.LastName" ">
+      </div>
+    </div>
+    <div>
+      <div style="float: left;">
         <label for="email">Email</label>
-        <div>
-            <input type="text" class="form-control" id="email" name="email" value="@Model.Email">
-        </div>
+        <input type="text" class="form-control" id="email" name="email" value="@Model.Email">
+      </div>
+      <div style="float: right;">
         <label for="city">Ciudad</label>
-        <div>
-            <input type="text" class="form-control" id="city" name="city" value="@Model.City">
-        </div>
+        <input type="text" class="form-control" id="city" name="city" value="@Model.City">
+      </div>
+    </div>
+    <div>
+      <div style="float: left;">
         <label for="country">País</label>
-        <div>
-            <input type="text" class="form-control" id="country" name="country" value="@Model.Country">
-        </div>
-
+        <input type="text" class="form-control" id="country" name="country" value="@Model.Country">
+      </div>
+      <div style="float: right;">
         <label for="signupDate">Fecha de registro</label>
-        <div>
-            <input type="date" class="form-control" id="signupDate" name="signupDate"
-                   value="@Model.SignupDate.ToString("yyyy-MM-dd")" min="2017-01-01" max="2020-08-01">
-        </div>
+        <input type="date" class="form-control" id="signupDate" name="signupDate"
+               value="@Model.SignupDate.ToString("yyyy-MM-dd")" min="2017-01-01" max="2020-08-01">
+      </div>
+    </div>
+    <div style="float: left;">
+      <label for="orderCount">Cantidad de pedidos</label>
+      <input type="number" class="form-control" id="orderCount" name="orderCount" min="0" max="500" value="@Model.OrderCount">
+    </div>
 
-        <label for="orderCount">Cantidad de pedidos</label>
-        <div>
-            <input type="number" class="form-control" id="orderCount" name="orderCount" min="0" max="500" value="@Model.OrderCount">
-        </div>
-
-        @Html.HiddenFor(model => model.Id)
-
-        <button type="submit" class="btn button-success color-success">Guardar</button>
-    </form>
+    @Html.HiddenFor(model => model.Id)
+    <div style="clear:both;">
+      <button type="submit" class="button-principal">Guardar</button>
+    </div>
+  </form>
 </div>
